@@ -74,7 +74,7 @@ class UnstructuredAudioDeleterProcessorTest extends IntegrationBase {
                 );
 
             assertEquals(1, foundMediaList.size());
-            ExternalObjectDirectoryEntity foundMedia = foundMediaList.get(0);
+            ExternalObjectDirectoryEntity foundMedia = foundMediaList.getFirst();
             assertEquals(MARKED_FOR_DELETION.getId(), foundMedia.getStatus().getId());
             assertEquals(USER_EMAIL_ADDRESS, foundMedia.getLastModifiedBy().getEmailAddress());
         });
@@ -121,7 +121,7 @@ class UnstructuredAudioDeleterProcessorTest extends IntegrationBase {
         );
 
         assertEquals(1, foundMediaList.size());
-        ExternalObjectDirectoryEntity foundMedia = foundMediaList.get(0);
+        ExternalObjectDirectoryEntity foundMedia = foundMediaList.getFirst();
         assertEquals(STORED.getId(), foundMedia.getStatus().getId());
     }
 }
