@@ -1,25 +1,41 @@
 package uk.gov.hmcts.darts.common.repository;
 
+import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import uk.gov.hmcts.darts.common.entity.CourtCaseEntity;
+import uk.gov.hmcts.darts.common.entity.CourthouseEntity;
+import uk.gov.hmcts.darts.common.entity.CourtroomEntity;
 import uk.gov.hmcts.darts.common.entity.EventEntity;
 import uk.gov.hmcts.darts.common.entity.HearingEntity;
+import uk.gov.hmcts.darts.test.common.data.PersistableFactory;
 import uk.gov.hmcts.darts.testutils.PostgresIntegrationBase;
 import uk.gov.hmcts.darts.testutils.stubs.HearingStub;
 
+import java.time.LocalDate;
+import java.time.LocalTime;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static uk.gov.hmcts.darts.test.common.data.CourthouseTestData.someMinimalCourthouse;
+import static uk.gov.hmcts.darts.test.common.data.CourtroomTestData.someMinimalCourtRoom;
+import static uk.gov.hmcts.darts.test.common.data.DefenceTestData.createListOfDefenceForCase;
+import static uk.gov.hmcts.darts.test.common.data.DefendantTestData.createListOfDefendantsForCase;
+import static uk.gov.hmcts.darts.test.common.data.JudgeTestData.createListOfJudges;
+import static uk.gov.hmcts.darts.test.common.data.ProsecutorTestData.createListOfProsecutor;
 
+@Slf4j
 class HearingRepositoryIntTest extends PostgresIntegrationBase {
 
     // generation count. Should always be an even number
     private static final int GENERATION_COUNT = 10;
 
     private static final int RESULT_LIMIT = GENERATION_COUNT;
+    public static final String COURTHOUSE_NAME = "TEST COURTHOUSE";
+    public static final String COURTROOM_NAME = "TEST COURTROOM";
 
     private List<HearingEntity> generatedHearingEntities;
 
@@ -31,8 +47,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
 
     @BeforeEach
     public void before() {
-        generatedHearingEntities = hearingStub
-            .generateHearings(GENERATION_COUNT);
+        generatedHearingEntities = hearingStub.generateHearings(GENERATION_COUNT);
     }
 
     @Test
@@ -80,7 +95,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
                                     .get(recordIndexToFind).getHearingDate(), RESULT_LIMIT);
         assertEquals(1, hearingEntityList.size());
         assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(),
-                     hearingEntityList.get(0).getId());
+                     hearingEntityList.getFirst().getId());
     }
 
     @Test
@@ -100,7 +115,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
                                                                                      null,
                                                                                      null, RESULT_LIMIT);
         assertEquals(2, hearingEntityList.size());
-        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.get(0).getId());
+        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.getFirst().getId());
         assertEquals(generatedHearingEntities.get(recordIndexToFindNext).getId(), hearingEntityList.get(1).getId());
     }
 
@@ -115,7 +130,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
                                                                                      null,
                                                                                      null, RESULT_LIMIT);
         assertEquals(1, hearingEntityList.size());
-        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.get(0).getId());
+        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.getFirst().getId());
     }
 
     @Test
@@ -130,7 +145,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
                                 null,
                                 null, RESULT_LIMIT);
         assertEquals(1, hearingEntityList.size());
-        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.get(0).getId());
+        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.getFirst().getId());
     }
 
     @Test
@@ -144,7 +159,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
                                                                                      null,
                                                                                      null, RESULT_LIMIT);
         assertEquals(1, hearingEntityList.size());
-        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.get(0).getId());
+        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.getFirst().getId());
     }
 
     @Test
@@ -158,7 +173,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
                                                                                      null,
                                                                                      null, RESULT_LIMIT);
         assertEquals(1, hearingEntityList.size());
-        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.get(0).getId());
+        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.getFirst().getId());
     }
 
     @Test
@@ -172,7 +187,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
                                                                                      null,
                                                                                      null, RESULT_LIMIT);
         assertEquals(1, hearingEntityList.size());
-        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.get(0).getId());
+        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.getFirst().getId());
     }
 
     @Test
@@ -186,7 +201,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
                                                                                      null,
                                                                                      null, RESULT_LIMIT);
         assertEquals(1, hearingEntityList.size());
-        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.get(0).getId());
+        assertEquals(generatedHearingEntities.get(recordIndexToFind).getId(), hearingEntityList.getFirst().getId());
     }
 
     @Test
@@ -260,7 +275,7 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
 
     @Test
     void findByIsActualCaseIds_shouldReturnHearingEntities() {
-        HearingEntity hearing1 = generatedHearingEntities.get(0);
+        HearingEntity hearing1 = generatedHearingEntities.getFirst();
         HearingEntity hearing2 = generatedHearingEntities.get(1);
         HearingEntity hearing3 = generatedHearingEntities.get(2);
         HearingEntity hearing4 = generatedHearingEntities.get(3);
@@ -284,7 +299,149 @@ class HearingRepositoryIntTest extends PostgresIntegrationBase {
             hearing4.getCourtCase().getId()
         ));
         assertThat(hearingEntities).hasSize(3);
-        assertThat(hearingEntities.stream().map(hearingEntity -> hearingEntity.getId()).toList())
+        assertThat(hearingEntities.stream().map(HearingEntity::getId).toList())
             .containsExactlyInAnyOrder(hearing1.getId(), hearing3.getId(), hearing4.getId());
+    }
+
+    @Test
+    void findByCourthouseCourtroomAndDate_ReturnsHearing() {
+        // given
+        CourthouseEntity courthouse = someMinimalCourthouse();
+        courthouse.setCourthouseName("Test Courthouse");
+
+        CourtroomEntity courtroom = someMinimalCourtRoom();
+        courtroom.setName("Test Courtroom");
+        courtroom.setCourthouse(courthouse);
+
+        HearingEntity hearingForCase = setupHearingForCase(courthouse, courtroom);
+        dartsPersistence.saveAll(hearingForCase);
+
+        String courthouseName = hearingForCase.getCourtroom().getCourthouse().getCourthouseName();
+        String courtroomName = hearingForCase.getCourtroom().getName();
+
+        List<HearingEntity> hearingEntities = hearingRepository.findByCourthouseCourtroomAndDate(
+            courthouseName,
+            courtroomName,
+            hearingForCase.getHearingDate()
+        );
+
+        // then
+        assertThat(hearingEntities).hasSize(1);
+        assertThat(hearingEntities.getFirst().getId()).isEqualTo(hearingForCase.getId());
+        assertEquals(COURTHOUSE_NAME, hearingEntities.getFirst().getCourtroom().getCourthouse().getCourthouseName());
+        assertEquals(COURTROOM_NAME, hearingEntities.getFirst().getCourtroom().getName());
+    }
+
+    @Test
+    void findByCourthouseCourtroomAndDate_ReturnsHearing_UsingWhitespacesFindBy() {
+        // given
+        CourthouseEntity courthouse = someMinimalCourthouse();
+        courthouse.setCourthouseName("Test Courthouse");
+
+        CourtroomEntity courtroom = someMinimalCourtRoom();
+        courtroom.setName("Test Courtroom");
+        courtroom.setCourthouse(courthouse);
+
+        HearingEntity hearingForCase = setupHearingForCase(courthouse, courtroom);
+        dartsPersistence.saveAll(hearingForCase);
+
+        String courthouseName = " Test Courthouse ";
+        String courtroomName = " Test Courtroom ";
+
+        log.info("Courthouse name: {}", courthouseName);
+        log.info("Courtroom name: {}", courtroomName);
+
+        // when
+        List<HearingEntity> hearingEntities = hearingRepository.findByCourthouseCourtroomAndDate(
+            courthouseName,
+            courtroomName,
+            hearingForCase.getHearingDate()
+        );
+
+        // then
+        assertThat(hearingEntities).hasSize(1);
+        assertThat(hearingEntities.getFirst().getId()).isEqualTo(hearingForCase.getId());
+        assertEquals(COURTHOUSE_NAME, hearingEntities.getFirst().getCourtroom().getCourthouse().getCourthouseName());
+        assertEquals(COURTROOM_NAME, hearingEntities.getFirst().getCourtroom().getName());
+    }
+
+    @Test
+    void findHearing_ReturnsHearing() {
+        CourthouseEntity courthouse = someMinimalCourthouse();
+        courthouse.setCourthouseName("Test Courthouse");
+
+        CourtroomEntity courtroom = someMinimalCourtRoom();
+        courtroom.setName("Test Courtroom");
+        courtroom.setCourthouse(courthouse);
+
+        HearingEntity hearingForCase = setupHearingForCase(courthouse, courtroom);
+        dartsPersistence.saveAll(hearingForCase);
+
+        String courthouseName = hearingForCase.getCourtroom().getCourthouse().getCourthouseName();
+        String courtroomName = hearingForCase.getCourtroom().getName();
+
+        log.info("Courthouse name: {}", courthouseName);
+        log.info("Courtroom name: {}", courtroomName);
+
+        // when
+        Optional<HearingEntity> hearingEntities = hearingRepository.findHearing(
+            courthouseName,
+            courtroomName,
+            "Case0000001",
+            hearingForCase.getHearingDate()
+        );
+
+        // then
+        assertThat(hearingEntities).isPresent();
+        assertThat(hearingEntities.get().getId()).isEqualTo(hearingForCase.getId());
+        assertEquals(COURTHOUSE_NAME, hearingEntities.get().getCourtroom().getCourthouse().getCourthouseName());
+        assertEquals(COURTROOM_NAME, hearingEntities.get().getCourtroom().getName());
+    }
+
+    @Test
+    void findHearing_ReturnsHearing_UsingWhitespaceFindBy() {
+        CourthouseEntity courthouse = someMinimalCourthouse();
+        courthouse.setCourthouseName("Test Courthouse");
+
+        CourtroomEntity courtroom = someMinimalCourtRoom();
+        courtroom.setName("Test Courtroom");
+        courtroom.setCourthouse(courthouse);
+
+        HearingEntity hearingForCase = setupHearingForCase(courthouse, courtroom);
+        dartsPersistence.saveAll(hearingForCase);
+
+        String courthouseName = " Test Courthouse ";
+        String courtroomName = " Test Courtroom ";
+
+        log.info("Courthouse name: {}", courthouseName);
+        log.info("Courtroom name: {}", courtroomName);
+
+        // when
+        Optional<HearingEntity> hearingEntities = hearingRepository.findHearing(
+            courthouseName,
+            courtroomName,
+            "Case0000001",
+            hearingForCase.getHearingDate()
+        );
+
+        // then
+        assertThat(hearingEntities).isPresent();
+        assertThat(hearingEntities.get().getId()).isEqualTo(hearingForCase.getId());
+        assertEquals(COURTHOUSE_NAME, hearingEntities.get().getCourtroom().getCourthouse().getCourthouseName());
+        assertEquals(COURTROOM_NAME, hearingEntities.get().getCourtroom().getName());
+    }
+
+    private HearingEntity setupHearingForCase(CourthouseEntity courthouseEntity, CourtroomEntity courtroomEntity) {
+        var case1 = PersistableFactory.getCourtCaseTestData().createCaseAt(courthouseEntity);
+        case1.setCaseNumber("Case0000001");
+        case1.setDefendantList(createListOfDefendantsForCase(2, case1));
+        case1.setDefenceList(createListOfDefenceForCase(2, case1));
+        case1.setProsecutorList(createListOfProsecutor(2, case1));
+
+        var hearingForCase1 = PersistableFactory.getHearingTestData().createHearingWith(case1, courtroomEntity);
+        hearingForCase1.addJudges(createListOfJudges(1, case1));
+        hearingForCase1.setHearingDate(LocalDate.parse("2023-06-20"));
+        hearingForCase1.setScheduledStartTime(LocalTime.parse("09:00"));
+        return hearingForCase1;
     }
 }
