@@ -1,4 +1,4 @@
-package uk.gov.hmcts.darts.audio.repository;
+package uk.gov.hmcts.darts.common.repository;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -8,11 +8,9 @@ import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import uk.gov.hmcts.darts.common.entity.CourtCaseEntity;
 import uk.gov.hmcts.darts.common.entity.CourtroomEntity;
+import uk.gov.hmcts.darts.common.entity.HearingEntity;
 import uk.gov.hmcts.darts.common.entity.MediaEntity;
 import uk.gov.hmcts.darts.common.entity.MediaLinkedCaseEntity;
-import uk.gov.hmcts.darts.common.repository.HearingRepository;
-import uk.gov.hmcts.darts.common.repository.MediaLinkedCaseRepository;
-import uk.gov.hmcts.darts.common.repository.MediaRepository;
 import uk.gov.hmcts.darts.test.common.data.PersistableFactory;
 import uk.gov.hmcts.darts.testutils.PostgresIntegrationBase;
 import uk.gov.hmcts.darts.testutils.stubs.CourtCaseStub;
@@ -104,38 +102,38 @@ class MediaRepositoryIntTest extends PostgresIntegrationBase {
 
     @Test
     void testFindMediaDetailsWithHearingId() {
-        MediaEntity expectedMedia = generatedMediaEntities.get(0);
+        MediaEntity expectedMedia = generatedMediaEntities.getFirst();
         Integer hearingId = mediaStub.getHearingId(expectedMedia.getId());
 
         List<MediaEntity> transformedMediaEntityList
             = mediaRepository.findMediaByDetails(
             List.of(hearingId), null, null);
         assertEquals(1, transformedMediaEntityList.size());
-        assertEquals(expectedMedia.getId(), transformedMediaEntityList.get(0).getId());
+        assertEquals(expectedMedia.getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
     void testFindMediaDetailsWithHearingIdAndStartDate() {
-        MediaEntity expectedMedia = generatedMediaEntities.get(0);
+        MediaEntity expectedMedia = generatedMediaEntities.getFirst();
         Integer hearingId = mediaStub.getHearingId(expectedMedia.getId());
         OffsetDateTime startTime = expectedMedia.getStart();
 
         List<MediaEntity> transformedMediaEntityList
             = mediaRepository.findMediaByDetails(List.of(hearingId), startTime, null);
         assertEquals(1, transformedMediaEntityList.size());
-        assertEquals(expectedMedia.getId(), transformedMediaEntityList.get(0).getId());
+        assertEquals(expectedMedia.getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
     void testFindMediaDetailsWithHearingIdAndStartDateAndEndDate() {
-        MediaEntity expectedMedia = generatedMediaEntities.get(0);
+        MediaEntity expectedMedia = generatedMediaEntities.getFirst();
         Integer hearingId = mediaStub.getHearingId(expectedMedia.getId());
         OffsetDateTime startTime = expectedMedia.getStart();
         OffsetDateTime endTime = expectedMedia.getEnd();
         List<MediaEntity> transformedMediaEntityList
             = mediaRepository.findMediaByDetails(List.of(hearingId), startTime, endTime);
         assertEquals(1, transformedMediaEntityList.size());
-        assertEquals(expectedMedia.getId(), transformedMediaEntityList.get(0).getId());
+        assertEquals(expectedMedia.getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -163,7 +161,7 @@ class MediaRepositoryIntTest extends PostgresIntegrationBase {
             null, expectedMedia.getStart(), null);
 
         assertEquals(2, transformedMediaEntityList.size());
-        assertEquals(generatedMediaEntities.get(0).getId(), transformedMediaEntityList.get(0).getId());
+        assertEquals(generatedMediaEntities.getFirst().getId(), transformedMediaEntityList.getFirst().getId());
         assertEquals(expectedMedia.getId(), transformedMediaEntityList.get(1).getId());
     }
 
@@ -177,7 +175,7 @@ class MediaRepositoryIntTest extends PostgresIntegrationBase {
             = mediaRepository.findMediaByDetails(
             List.of(hearingId), expectedMedia.getStart(), expectedMedia.getEnd());
         assertEquals(1, transformedMediaEntityList.size());
-        assertEquals(expectedMedia.getId(), transformedMediaEntityList.get(0).getId());
+        assertEquals(expectedMedia.getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -192,7 +190,7 @@ class MediaRepositoryIntTest extends PostgresIntegrationBase {
             = mediaRepository.findMediaByDetails(
             List.of(hearingId, hearingId2), null, null);
         assertEquals(2, transformedMediaEntityList.size());
-        assertEquals(expectedMedia.getId(), transformedMediaEntityList.get(0).getId());
+        assertEquals(expectedMedia.getId(), transformedMediaEntityList.getFirst().getId());
         assertEquals(expectedMedia1.getId(), transformedMediaEntityList.get(1).getId());
     }
 
@@ -261,6 +259,33 @@ class MediaRepositoryIntTest extends PostgresIntegrationBase {
         assertThat(mediaRepository.getVersionCount("someIdMultiple")).isEqualTo(2);
     }
 
+    @Test
+    void setAllAssociatedMediaToIsCurrentFalseExcludingMediaId_shouldUpdateAllRelatedMedias() {
+        var media1 = PersistableFactory.getMediaTestData().someMinimalMedia();
+        media1.setChronicleId("chronicleId");
+        media1.setIsCurrent(true);
+        dartsPersistence.save(media1);
+        var media2 = PersistableFactory.getMediaTestData().someMinimalMedia();
+        media2.setChronicleId("chronicleId");
+        media2.setIsCurrent(true);
+        dartsPersistence.save(media2);
+        var media3 = PersistableFactory.getMediaTestData().someMinimalMedia();
+        media3.setChronicleId("chronicleId");
+        media3.setIsCurrent(true);
+        dartsPersistence.save(media3);
+        var media4 = PersistableFactory.getMediaTestData().someMinimalMedia();
+        media4.setChronicleId("otherChronicleId");
+        media4.setIsCurrent(true);
+        dartsPersistence.save(media4);
+
+        transactionalUtil.executeInTransaction(() -> mediaRepository.setAllAssociatedMediaToIsCurrentFalseExcludingMediaId("chronicleId", media2.getId()));
+
+        assertThat(mediaRepository.findById(media1.getId()).orElseThrow().getIsCurrent()).isFalse();
+        assertThat(mediaRepository.findById(media2.getId()).orElseThrow().getIsCurrent()).isTrue();
+        assertThat(mediaRepository.findById(media3.getId()).orElseThrow().getIsCurrent()).isFalse();
+        assertThat(mediaRepository.findById(media4.getId()).orElseThrow().getIsCurrent()).isTrue();
+    }
+
     static Stream<Arguments> findAllByMediaTimeContainsTestSource() {
         OffsetDateTime startTime = OffsetDateTime.now();
         OffsetDateTime endTime = startTime.plusHours(2);
@@ -314,5 +339,37 @@ class MediaRepositoryIntTest extends PostgresIntegrationBase {
         mediaLinkedCase.setMedia(media);
         mediaLinkedCase.setCourtCase(courtCase);
         return mediaLinkedCase;
+    }
+
+    @Test
+    void findByCaseIdWithMediaList_shouldReturnCorrectData() {
+        HearingEntity hearing1 = PersistableFactory.getHearingTestData().someMinimalHearing();
+        HearingEntity hearing2 = PersistableFactory.getHearingTestData().someMinimalHearing();
+        HearingEntity hearing3 = PersistableFactory.getHearingTestData().someMinimalHearing();
+
+        hearing2.setCourtCase(hearing1.getCourtCase());
+
+        dartsPersistence.save(hearing1);
+        dartsPersistence.save(hearing2);
+        dartsPersistence.save(hearing3);
+
+        MediaEntity media1 = PersistableFactory.getMediaTestData().someMinimal();
+        MediaEntity media2 = PersistableFactory.getMediaTestData().someMinimal();
+        MediaEntity media3 = PersistableFactory.getMediaTestData().someMinimal();
+        dartsPersistence.save(media1);
+        dartsPersistence.save(media2);
+        dartsPersistence.save(media3);
+
+        hearing1.addMedia(media1);
+        hearing2.addMedia(media2);
+        hearing3.addMedia(media3);
+
+        hearingRepository.saveAll(List.of(hearing1, hearing2, hearing3));
+
+        List<MediaEntity> mediaEntities = mediaRepository.findByCaseIdWithMediaList(hearing1.getCourtCase().getId());
+
+        assertThat(mediaEntities.stream().map(MediaEntity::getId))
+            .hasSize(2)
+            .containsExactlyInAnyOrder(media1.getId(), media2.getId());
     }
 }
