@@ -43,7 +43,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.darts.audit.api.AuditActivity.CREATE_COURTHOUSE;
 import static uk.gov.hmcts.darts.courthouse.exception.CourthouseApiError.COURTHOUSE_NOT_FOUND;
@@ -87,7 +86,7 @@ public class CourthouseServiceImpl implements CourthouseService {
         Set<SecurityGroupEntity> secGrps = courthouseEntity.getSecurityGroups();
         List<Integer> secGrpIds = new ArrayList<>();
         if (secGrps != null && !secGrps.isEmpty()) {
-            secGrpIds = secGrps.stream().map(SecurityGroupEntity::getId).collect(Collectors.toList());
+            secGrpIds = secGrps.stream().map(SecurityGroupEntity::getId).toList();
         }
 
         AdminCourthouse adminCourthouse = adminMapper.mapFromEntityToAdminCourthouse(courthouseEntity);
@@ -205,7 +204,8 @@ public class CourthouseServiceImpl implements CourthouseService {
     }
 
     private void checkCourthouseNameIsUnique(String courthouseName) {
-        Optional<CourthouseEntity> foundCourthouse = courthouseRepository.findByCourthouseName(StringUtils.toRootUpperCase(courthouseName));
+        Optional<CourthouseEntity> foundCourthouse =
+            courthouseRepository.findByCourthouseName(StringUtils.toRootUpperCase(StringUtils.trimToEmpty(courthouseName)));
 
         if (foundCourthouse.isPresent()) {
             throw new DartsApiException(CourthouseApiError.COURTHOUSE_NAME_PROVIDED_ALREADY_EXISTS);
@@ -262,7 +262,8 @@ public class CourthouseServiceImpl implements CourthouseService {
     @SuppressWarnings("PMD.UselessParentheses")
     public CourthouseEntity retrieveAndUpdateCourtHouse(Integer courthouseCode, String courthouseName)
         throws CourthouseNameNotFoundException, CourthouseCodeNotMatchException {
-        CourthouseEntity foundCourthouse = retrieveCourthouse(courthouseCode, courthouseName);
+        String courthouseNameUpperTrimmed = StringUtils.upperCase(StringUtils.trimToEmpty(courthouseName));
+        CourthouseEntity foundCourthouse = retrieveCourthouse(courthouseCode, courthouseNameUpperTrimmed);
         if (foundCourthouse.getCode() == null && courthouseCode != null) {
             //update courthouse in database with new code
             foundCourthouse.setCode(courthouseCode);
@@ -270,25 +271,25 @@ public class CourthouseServiceImpl implements CourthouseService {
             foundCourthouse.setLastModifiedBy(currentUser);
             courthouseRepository.saveAndFlush(foundCourthouse);
         } else {
-            if (!StringUtils.equalsIgnoreCase(foundCourthouse.getCourthouseName(), courthouseName)
+            if (!StringUtils.equalsIgnoreCase(foundCourthouse.getCourthouseName(), courthouseNameUpperTrimmed)
                 || (courthouseCode != null && !Objects.equals(courthouseCode, foundCourthouse.getCode()))) {
-                throw new CourthouseCodeNotMatchException(foundCourthouse, courthouseCode, courthouseName);
+                throw new CourthouseCodeNotMatchException(foundCourthouse, courthouseCode, courthouseNameUpperTrimmed);
             }
         }
         return foundCourthouse;
     }
 
     private CourthouseEntity retrieveCourthouse(Integer courthouseCode, String courthouseName) throws CourthouseNameNotFoundException {
-        String courthouseNameUC = StringUtils.upperCase(courthouseName);
+        String courthouseNameUpperTrimmed = StringUtils.upperCase(StringUtils.trimToEmpty(courthouseName));
         Optional<CourthouseEntity> courthouseOptional = Optional.empty();
         if (courthouseCode != null) {
             courthouseOptional = courthouseRepository.findByCode(courthouseCode.shortValue());
         }
         if (courthouseOptional.isEmpty()) {
             //code not found, lookup name instead
-            courthouseOptional = courthouseRepository.findByCourthouseName(courthouseNameUC);
+            courthouseOptional = courthouseRepository.findByCourthouseName(courthouseNameUpperTrimmed);
             if (courthouseOptional.isEmpty()) {
-                throw new CourthouseNameNotFoundException(courthouseNameUC);
+                throw new CourthouseNameNotFoundException(courthouseNameUpperTrimmed);
             }
         }
         return courthouseOptional.get();
